# opengl_tools_2022

./: CMakeLists.txt  obj_parser.cpp  ogl_tools.cpp  ogl_tools.h
